Latest version before fixing up margins, gaps etc,

--- a/style.css
+++ b/style.css
@@ -6,44 +6,80 @@ body {
 
 }
 
-.section-1 {
-    background-color: #1f2937;
-    display: flex;
+
+.header {
+    padding-left: 100px;
+    padding-right: 100px;
 }
 
-.section-2 {
+.footer,
+.header {
+    background-color: #1F2937;
     display: flex;
+    text-decoration: none;
+    justify-content: space-between;
+}
+
+.section-1 {
+    display: flex;
+    background-color: #1F2937;
+    gap: 30px;
+    padding-left: 100px;
 }
 
 .logo { 
     display: flex;
-    margin: 10px;
-    padding: 10px;
     margin-right: auto;
+    font-size: 24px;
+    color: #F9FAF8;
+
 }
 
 .header-links {
    display: flex;
    text-decoration: none;
+   font-size: 18px;
+   color: #E5E7EB;
+
 }
 
 button {
-    background-color: blue;
+    background-color: #3882F6;
+    justify-content: left;
 }
 
 .info {
     display: flex;
     justify-content: center;
+    font-size: 36px;
+    font-weight: 800;
+    color: #1F2937;
+    margin-bottom: 20px;
 }
 
 img {
     display: flex;
-    height: 50px;
-    width: auto;
+    width: 90%;
+    justify-content: space-between;
+    padding: 10px;
+}
+
+.section-2 {
+    margin-bottom: 60px;
+    padding-left: 150px;
+    padding-right: 150px;
+}
+
+.header-photo {
+    max-height: 250px;
+    max-height: auto;
+    padding-right: 100px;
 }
 
 .text {
-    display: inline;
+    display: flex;
+    padding: 10px;
+    gap: 20px;
 }
 
 .images {
@@ -51,22 +87,62 @@ img {
 }
 
 .quote {
-    display: flex;
+    font-size: 36px;
+    font-style: italic;
+    color: #1F2937;
 }
 
 .quoter {
-    display: inline;
-    justify-content: left;
-}
-
-.section-5 {
-    display: flex;
-}
-
-.footer {
-    text-align: center;
+    text-align: right;
+    font-size: 25px;
+    font-weight: bold;
 }
 
 .section-4 {
-
+    display: flex;
+    background-color: #3882F6;
+    flex: auto;
+    color: white;
+    padding: 20px;
+    padding-left: 100px;
+    padding-top: 40px;
+    padding-bottom: 40px;
 }
+
+.footer {
+    justify-content: center;
+    bottom: 0;
+    width: 100%;
+    color: white;
+}
+
+.content {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+  }
+
+  .hero-main-text {
+    font-size: 48px;
+    font-weight: 800;
+    color: #F9FAF8;
+  }
+
+  .hero-seconday-text {
+      display: flex;
+      color: #E5E7EB;
+      font-size: 18px;
+  }
+
+  .section-3 {
+      background-color: #E5E7EB;
+      padding-left: 150px;
+      padding-right: 150px;
+  }
+
+  .sign-bottom {
+      border: solid;
+      border: white;
+      margin: auto;
+      color: white;
+  }
